# chx

./: .clangd  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
.github/workflows/: tests.yml
cmake/: chxConfig.cmake.in
include/chx/: ReceiverChannel.hpp  SenderChannel.hpp  channel.hpp  channelCore.hpp
include/chx/Buffered/: BufferedChannel.hpp  BufferedDataHandler.hpp
include/chx/Unbuffered/: UnbufferedChannel.hpp  UnbufferedDataHandler.hpp
include/circular_queue/: circular_queue.hpp  circular_queue_impl.hpp  circular_queue_thread_safe.hpp
src/: channel.cpp
stage/include/chx/: SenderChannel.hpp  channel_factory.hpp
stage/include/chx/Buffered/: BufferedChannel.hpp  circular_queue.hpp
stage/include/include/chx/Unbuffered/: UnbufferedChannel.hpp
stage/lib/cmake/chx/: chxConfig.cmake  chxTargets.cmake
test/: CMakeLists.txt  test_buffered_channel.cpp  test_circular_queue.cpp  test_receiver_channel.cpp  test_sender_channel.cpp  test_thread_safe_circular_queue.cpp  test_unbuffered_channel.cpp
